--- a/src/app/components/help/help.component.css
+++ b/src/app/components/help/help.component.css
@@ -16,3 +16,8 @@ img {
   ol > li::marker {
     font-weight: bold;
   }
+
+  .watch,.watch-default:hover
+{
+  color:#f75685!important;
+}
