--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,7 @@ text-align: center;
   border: 5px solid #e8e6e6;
   text-align: justify;
   padding: 5px;
+  font-size: 12px;
 }
 .page-container a {color: #218b99;}
 .page-container .page-header{ 
@@ -102,5 +103,20 @@ display: block;
 margin-bottom:5px;
 font-weight:500;
 text-align: center;
-color: #00bcd4;
+color: #2aea0e;
+font-size: 14px;
+}
+
+.mat-h2, .mat-title, .mat-typography .mat-h2, .mat-typography .mat-title, .mat-typography h2 {
+  font: 500 16px/32px Roboto, "Helvetica Neue", sans-serif;
+  letter-spacing: normal;
+  margin: 0 0 -10px;
+}
+
+.page-container h2,.page-container h3 strong
+{
+  color: #297983;
+    font-weight: 500;
+    font-size: 16px;
+    text-decoration: underline;
 }
